[tool.poetry]
name = "svmpsp-graphnetviz"
version = "0.1.0"
description = "Graph generation and visualization tool."
authors = ["Sivam Pasupathipillai <sivam.pasupathipillai@gmail.com>"]
readme = "README.md"
packages = [{include = "svmpsp_graphnetviz"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.2"
networkx = "^3.2.1"
scipy = "^1.11.4"
pyvis = "^0.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.3"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
gnv = "svmpsp_graphnetviz.cli:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=svmpsp_graphnetviz --cov-fail-under=90  --cov-report term-missing --maxfail=1 --verbosity=2"
